<resources>
    <string name="app_name">PROJETO 17.10</string>
    <string name="txt_titulo">Aplicativo Lista Vip Curso Android</string>
    <string name="txt_hint_edit_PrimeiroNome">Primeiro Nome</string>
    <string name="txt_hint_edit_SobreNome">Sobrenome</string>
    <string name="txt_hint_edit_CursoDesejado">Curso Desejado</string>
    <string name="txt_hint_edit_TelefoneDeContato">Telefone de Contato</string>
    <string name="txt_button_Limpar">Limpar</string>
    <string name="txt_button_Salvar">Salvar</string>
    <string name="txt_button_Finalizar">Finalizar</string>
</resources>